--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="top-movies-slide">
             <div class="owl-carousel" id="top-movies-slide">
                 <!-- MOVIE ITEM -->
-<a href="https://delulus.dondeseria.com/" class="Foto del logo de Delulus, Restaurante de Cali">
+<a href="https://restaurantes.dondeseria.com/restaurantes/delulus-pizza-pasta-&-cafe.html" class="Foto del logo de Delulus, Restaurante de Cali">
     <div class="movie-item">
         <img src="./images/series/delulus-pizza-pasta-cafe.jpg" alt="Delulus">
         <div class="movie-item-content">
@@ -230,7 +230,7 @@
 <!-- END MOVIE ITEM -->
 
 <!-- MOVIE ITEM -->
-<a href="https://www.dondeseria.com/restaurantes/parada-llanera.html" class="Foto del logo de Parada Llanera, Restaurante de Cali">
+<a href="https://restaurantes.dondeseria.com/restaurantes/parada-llanera.html" class="Foto del logo de Parada Llanera, Restaurante de Cali">
     <div class="movie-item">
         <img src="./images/series/parada-llanera.jpg" alt="Parada Llanera">
         <div class="movie-item-content">
@@ -280,7 +280,7 @@
 <!-- END MOVIE ITEM -->
 
 <!-- MOVIE ITEM -->
-<a href="https://elparchedelgato2.dondeseria.com/" class="Foto del logo de El Parche del Gato 2, Restaurante de Cali">
+<a href="https://restaurantes.dondeseria.com/restaurantes/el-parche-del-gato-2.html" class="Foto del logo de El Parche del Gato 2, Restaurante de Cali">
     <div class="movie-item">
         <img src="./images/series/el-parche-del-gato-2.jpg" alt="El Parche del Gato 2">
         <div class="movie-item-content">
@@ -318,7 +318,7 @@
             </div>
             <div class="movies-slide carousel-nav-center owl-carousel">
                 <!-- MOVIE ITEM -->
-<a href="https://delulus.dondeseria.com/" class="Foto del logo de Delulus, Restaurante de Cali">
+<a href="https://restaurantes.dondeseria.com/restaurantes/delulus-pizza-pasta-&-cafe.html" class="Foto del logo de Delulus, Restaurante de Cali">
     <img src="./images/series/delulus-pizza-pasta-cafe.jpg" alt="Delulus">
     <div class="movie-item-content">
         <div class="movie-item-title">
@@ -341,7 +341,7 @@
 <!-- END MOVIE ITEM -->
 
 <!-- MOVIE ITEM -->
-<a href="https://elparchedelgato2.dondeseria.com/" class="Foto del logo de El Parche del Gato 2, Restaurante de Cali">
+<a href="https://restaurantes.dondeseria.com/restaurantes/el-parche-del-gato-2.html" class="Foto del logo de El Parche del Gato 2, Restaurante de Cali">
     <img src="./images/series/el-parche-del-gato-2.jpg" alt="El Parche del Gato 2">
     <div class="movie-item-content">
         <div class="movie-item-title">
@@ -387,7 +387,7 @@
 <!-- END MOVIE ITEM -->
 
 <!-- MOVIE ITEM -->
-<a href="https://www.dondeseria.com/restaurantes/parada-llanera.html" class="Foto del logo de Parada Llanera, Restaurante de Cali">
+<a href="https://restaurantes.dondeseria.com/restaurantes/parada-llanera.html" class="Foto del logo de Parada Llanera, Restaurante de Cali">
     <img src="./images/series/parada-llanera.jpg" alt="Parada Llanera">
     <div class="movie-item-content">
         <div class="movie-item-title">
